feat: enhance auth validation and prepare for deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 PORT=4000
-MONGO_URI=your_mongodb_uri_here
-JWT_SECRET=your_jwt_secret_here
-OPENROUTER_API_KEY=your_openrouter_api_key_here
+MONGO_URI=your_mongodb_atlas_uri
+JWT_SECRET=your_jwt_secret_key
+OPENROUTER_API_KEY=your_openrouter_api_key
 OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
-NODE_ENV=development
+NODE_ENV=production
+FRONTEND_URL=your_frontend_url_after_deployment
